# Opal-Matrix

./: .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml  index.html  styles.css
.cargo/: config.toml
.github/tools/collapse-toml/: Cargo.toml
.github/tools/collapse-toml/src/: main.rs
.github/workflows/: main.yml  release.yml
.zed/: settings.json
linux-specific/: gstmxcurisrc.c  how_to_build  meson.build
macros/: Cargo.toml
macros/src/: lib.rs
public/: background.glsl  background_center.glsl  background_lines.glsl
shared/: Cargo.toml
shared/src/: breadcrumbs.rs  commands.rs  lib.rs  macros.rs  messages.rs  parsing.rs  profile.rs  settings.rs  sidebar.rs  synth.rs  timeline.rs  user_profile.rs
shared/src/account_data/: breadcrumbs.rs  mod.rs  server_order.rs
shared/src/api/: errors.rs  events.rs  mod.rs  signals.rs
src/: app.rs  components.rs  hooks.rs  logger.rs  main.rs  redact_mode.rs  shader.js  state.rs  tauri_functions.rs  theming.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app_data/crypto_cAC3BNopt0.db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal
src-tauri/app_data/crypto_cc9A1530pS.db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: builder.rs  ipc_log.rs  lib.rs  main.rs  run.rs  settings.rs  state.rs  sync.rs  versions.rs
src-tauri/src/authentication/: login.rs
src-tauri/src/frontend/: audio.rs  commands.rs  dialog.rs  klipy.rs  members.rs  messages.rs  mod.rs  notifications.rs  presence.rs  profiles.rs  rooms.rs  search.rs  settings.rs  sidebar.rs  timeline.rs
src-tauri/src/matrix_api/: account_data.rs  authentication.rs  breadcrumbs.rs  crypto.rs  discovery.rs  keyring.rs  login_flow.rs  matrixrtc.rs  media.rs  messages.rs  mod.rs  previews.rs  profile.rs  rooms.rs  storage.rs  sync.rs  well_known.rs
src-tauri/src/storage/: media.rs  members.rs  message_extra.rs  messages.rs  mod.rs  reactions.rs  receipts.rs  rooms.rs
src-web/: Cargo.toml
src-web/src/: lib.rs
src/components/: authentication.rs  blurhash.rs  chat.rs  emoji_picker.rs  loading.rs  log_view.rs  logo.rs  mod.rs  presence.rs  previews.rs  profile_card.rs  shader.rs  sidebar.rs  text.rs  user_profile.rs
src/components/chat/: calls.rs  header.rs  info.rs  messages.rs  mod.rs
src/components/input/: menu.rs  mod.rs
src/components/overlays/: audi_menu.rs  emoji_picker.rs  gif_picker.rs  host.rs  mod.rs  mute_menu_popup.rs  profile_card.rs  settings.rs  space_search.rs
src/components/settings/: definition.rs  mod.rs
src/components/settings/sections/: appearance.rs  chats.rs  general.rs  mod.rs  profiles.rs  updates.rs
src/tauri/: chat.rs  mod.rs  sidebar.rs
style/: input.css  output.css
