[package]
name = "opal-matrix-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
web-sys = { version = "0.3.95", features = [
  "DomParser",
  "SupportedType",
  "Document",
  "Element",
  "Node",
] }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
colored = "3.1.1"
send_wrapper = { version = "0.6.0", features = ["futures"] }
stylist = "0.15.1"
chrono = { version = "0.4.44", features = ["wasmbind"] }
leptos-use = "0.18.3"
shared = { path = "./shared" }
urlencoding = "2.1.3"
colorsys = "0.7.3"
console_log = "1.0.0"
log = "0.4.29"
phosphor-leptos = "0.8.0"

[workspace]
members = ["shared", "src-tauri"]
