[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.8"

base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
const_format = "0.2.36"
csscolorparser = { version = "0.8.3", features = ["serde"] }
ego-tree = "0.11.0"
linkify = "0.11.0"
scraper = "0.27.0"
sha2 = "0.11.0"
urlencoding = "2.1.3"
uuid = {
  version = "1.23.1",
  default-features = false,
  features = ["js", "serde", "v4"]
}
