[package]
name = "opal-matrix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opal_matrix_backend"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4.29"
anyhow = "1.0.102"
chrono = "0.4.44"
url = "2.5.8"
percent-encoding = "2.3.2"
version-compare = "0.2.1"
matrix-sdk-crypto = { version = "0.17.0", features = ["js"] }
matrix-sdk-sqlite = { version = "0.16.0", features = ["crypto-store", "bundled"] }
keyring = { version = "3.6.3", default-features = false, features = ["async-secret-service", "async-io", "crypto-rust"] }
ruma = { version = "0.15.1", features = ["client-api-c"] }
hex = "0.4.3"
http = "1.4.0"
bytes = "1.11.1"
sha2 = "0.11.0"
bs58 = "0.5.1"
hkdf = "0.13.0"
base64 = "0.22.1"
aes = "0.9.0"
hmac = "0.13.0"
ctr = "0.10.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
tokio-util = "0.7.18"
tokio = "1.51.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
shared = { path = "../shared" }
tauri-plugin-http = { version = "2", features = ["json"] }
scraper = "0.26.0"
ego-tree = "0.11.0"
linkify = "0.11.0"
dirs = "6.0.0"
uuid = "1.23.1"
tauri-plugin-notification = "2"
regex = "1.12.3"
matrix-sdk = { version = "0.17.0", features = ["anyhow", "e2e-encryption", "sqlite"] }
futures = "0.3.32"
async-recursion = "1.1.1"
matrix-sdk-ui = "0.17.0"
tracing-log = "0.2.0"
