[package]
name = "opal-matrix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opal_matrix_backend"

[dependencies]
aes = "0.9.0"
anyhow = "1.0.102"
async-recursion = "1.1.1"
base64 = "0.22.1"
bs58 = "0.5.1"
bytes = "1.11.1"
chrono = "0.4.44"
const_format = "0.2.36"
cpal = "0.17.3"
ctr = "0.10.0"
dirs = "6.0.0"
ego-tree = "0.11.0"
futures = "0.3.32"
futures-util = "0.3.32"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
hex = "0.4.3"
hkdf = "0.13.0"
hmac = "0.13.0"
http = "1.4.0"
image = "0.25.10"
keyring-core = "1.0.0"
linkify = "0.11.0"
livekit = { version = "0.7.42", features = ["native-tls"] }
log = "0.4.29"
matrix-sdk = {
  version = "0.17.0",
  features = ["anyhow", "e2e-encryption", "sqlite", "experimental-send-custom-to-device"]
}
matrix-sdk-ui = "0.17.0"
mime = "0.3.17"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
regex = "1.12.3"
ringbuf = "0.5.0"
roxygen = "1.0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls = { version = "0.23.40", features = ["ring"] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
shared = { path = "../shared" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio = "1.51.1"
tokio-util = "0.7.18"
tracing-log = "0.2.0"
url = "2.5.8"
uuid = "1.23.1"
version-compare = "0.2.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = {
  version = "1.0",
  features = ["rt-tokio-crypto-rust"]
}

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(windows)'.dependencies]
windows-native-keyring-store = "1.0"
